# advent-of-code

./: README.md  go.mod
2024/day-2/: main.go
2024/day-3/: main.go
2024/day-4/: main.go
2024/day-5/: .main.go.swp  main.go
2024/day-6/: .sample_input.txt.swp  main.go
2024/day-7/: .main.go.swo  .main.go.swp  main.go
2024/day-8/: main.go
2024/day-9/: main.go
2024/utils/: read_input.go
2025/: .gitignore  CMakeLists.txt
2025/src/: day_1.h  day_2.h  day_3.h  day_4.h  day_5.h  day_6.h  day_7.h  day_8.h  day_9.h  helper.h  main.cpp  parser.h
